--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,38 @@
+@import url(https://fonts.googleapis.com/css?family=Poppins:regular,500,600&display=swap);
+
+@font-face {
+    font-family: CalSans;
+    font-display: swap;
+    src: url(../fonts/CalSans-SemiBold.woff2) format(woff2), url(../fonts/CalSans-SemiBold.woff) format(woff);
+    font-weight: 400;
+    font-style: normal;
+}
 *, *::before,*::after{
     margin: 0;
     padding: 0;
     border: none;
     box-sizing: border-box;
+}
+html,body{
+    height: 100%;
+    min-width: 320px;
+}
+body {
+    line-height: 1;
+    font-family: Poppins;
+    color: #666666;
+}
+
+.wrapper{
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.main{
+    flex: 1 1 auto;
+}
+
+[class*="__container"]{
+    max-width: 1200px;
+    margin: 0 auto;
 }
