--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,15 @@ body {
     font-family: Poppins;
     color: #666666;
 }
-
+a{
+    text-decoration: none;
+}
+ul{}
+li{
+    list-style: none;
+}
 .wrapper{
+    overflow: hidden;
     min-height: 100%;
     display: flex;
     flex-direction: column;
@@ -33,6 +40,34 @@ body {
 }
 
 [class*="__container"]{
-    max-width: 1200px;
+    max-width: 1230px;
     margin: 0 auto;
+    padding: 0px 15px;
+}
+
+/*---------------------------------------------*/
+.header {}
+.header__container {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    display: flex;
+    gap: 131px;
+    align-items: center;
+    min-height: 152px;
+}
+.header__logo {}
+.header__menu {}
+
+.menu {}
+.menu__list {
+    display: flex;
+    gap: 56px;
+}
+.menu__item {}
+.menu__link {
+    color: rgba(18, 18, 18, 0.4);
+    font-weight: 500;
+}
+.menu__link:hover{
+    text-decoration: underline;
 }
