--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,9 @@ li{
 }
 .menu__list {
     display: flex;
-    gap: 56px;
+    column-gap: 56px;
+    row-gap: 10px;
+    flex-wrap: wrap;
 }
 .menu__item {}
 .menu__link {
@@ -89,6 +91,30 @@ li{
     .header__container{
        gap: 50px;
        min-height: 100px;
+    }
+    .menu__list{
+        column-gap: 40px;
+    }
+}
+@media (max-width: 767.98px){
+    .header__container{
+        min-height: 65px;
+    }
+}
+@media(max-width: 479.98px) {
+    .header__container{
+       gap: 15px;
+    }
+    .menu {
+        padding: 0;
+    }
+    .menu__list{
+        column-gap: 20px;
+    }
+    .header__logo{
+        width: 28px;
+        flex: 0 0 28px;
+        overflow: hidden;
     }
 }
 /*---------------------------------------------*/
@@ -110,7 +136,7 @@ li{
     font-family: CalSans;
     color: #121212;
     font-size: 56px;
-    line-height: 67px;
+    line-height: 1.2;
 }
 .main__title span{
     color: #FF6428;
@@ -135,12 +161,17 @@ li{
     align-items: center;
 }
 .actions-main__button {
+    text-align: center;
     padding: 18.5px 48px;
     background: #FF6428;
     border-radius: 40px;
     color: #fff;
     font-weight: 600;
     line-height: 28px;
+    transform: all 0.3s ease 0s;
+}
+.actions-main__button:hover{
+    background-color: #be4515;
 }
 .actions-main__button:not(:last-child){
     margin-right: 40px;
@@ -155,12 +186,16 @@ li{
     flex: 0 1 50%;
 }
 .main__image {
-    display: inline-block;
+ /*   display: inline-block;*/
     position: relative;
-    margin-right: -135px; 
+    margin-right: -135px;
+    max-width: 672px;
+    padding-bottom: 97.6%; 
 }
 .main__image img{
-    max-width: 672px;
+    position: absolute;width: 100%;height: 100%;top: 0;left: 0;
+    object-fit: cover;
+    border-radius: 0 0 160px 375px;
 }
 .main__image::after{
     content: "";
@@ -185,5 +220,28 @@ li{
         flex: 0 0 30%;
     }
 }
-
-/* 2:06:45*/
+@media (max-width: 767.98px){
+    .main__content {
+        flex: 1 1 100%;
+        padding-right: 0;
+        padding-top: 80px;
+    }
+    .main__decor{
+        display: none;
+    }
+    .main__title{
+        font-size: 44px;
+    }
+}
+@media(max-width: 479.98px) {
+    .actions-main {
+        flex-wrap: wrap;
+        justify-content: center;
+    }.actions-main__button {
+        flex: 1 1 100%;
+    }
+    .actions-main__button:not(:last-child){
+        margin-right: 0px;
+        margin-bottom: 15px;
+}
+}
