--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,6 @@ body {
 a{
     text-decoration: none;
 }
-ul{}
 li{
     list-style: none;
 }
@@ -35,6 +34,17 @@ li{
     min-height: 100%;
     display: flex;
     flex-direction: column;
+}
+/*---------------------------------------------*/
+.title {
+    font-family: CalSans;
+    color: #121212;
+    text-align: center;
+    font-size: 44px;
+    line-height: 1.2;
+}
+.title span {
+    color: #FF6428;
 }
 /*---------------------------------------------*/
 .page{
