--- a/css/style.css
+++ b/css/style.css
@@ -46,19 +46,26 @@ li{
 .title span {
     color: #FF6428;
 }
+@media (max-width: 767.98px){
+    .title {
+        font-size: 38px;
+    }
+}
+
 /*---------------------------------------------*/
 .page{
     flex: 1 1 auto;
 }
-.page__main {
-}
+
 
 [class*="__container"]{
     max-width: 1230px;
     margin: 0 auto;
     padding: 0px 15px;
 }
+.page__main {}
 .page__store {}
+.page__categories {}
 
 /*---------------------------------------------*/
 .header {
@@ -132,6 +139,16 @@ li{
 
 .main {
     padding-bottom: 80px;
+}
+@media (max-width: 991.98px) {
+    .main {
+        padding-bottom: 50px;
+    }     
+}
+@media (max-width: 767.98px) {
+    .main {
+        padding-bottom: 30px;
+    }     
 }
 .main__container {
     display: flex;
@@ -278,6 +295,7 @@ li{
 .body-store__header {
     margin-bottom: 32px;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     gap: 15px;
@@ -307,7 +325,9 @@ li{
 .item {
     display: grid;
 }
-.item__image {}
+.item__image {
+    text-align: center;
+}
 .item__image:not(:last-child){
     margin-bottom: 40px;
 }
@@ -324,4 +344,92 @@ li{
 .item__prace {
     font-size: 14px;
     line-height: 21px;
+}
+@media (max-width: 991.98px) {
+    .store {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+    .store__title {
+        margin-bottom: 50px;
+    }
+    .body-store__items {
+        grid-template-columns: repeat(2, 1fr);
+    }     
+}
+@media (max-width: 767.98px) {
+    .store {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+    .store__title {
+        margin-bottom: 20px;
+    }
+    .item__image:not(:last-child){
+        margin-bottom: 10px;
+    }
+}
+@media (max-width:600px) {
+    .body-store__items {
+        grid-template-columns: repeat(1, 1fr);
+    }          
+}
+/*-------------------------------------------------*/
+
+.categories {
+    padding-top: 90px;
+    padding-bottom: 110px;
+}
+.categories__container {}
+.categories__title {
+    margin-bottom: 80px;
+}
+.title {}
+.categories__items {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 70px;
+    row-gap: 35px;
+}
+.categories__item {}
+.item-category {
+    position: relative;
+}
+.item-category:hover .item-category__imege img{
+    transform: scale(1.1);
+}
+
+.item-category__title {
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 30px 20px;
+    color: #fff;
+    font-size: 20px;
+    line-height: 1.5;
+    font-weight: 600;
+    z-index: 3;
+    width: 100%;
+}
+.item-category__imege {
+    position: relative;
+    overflow: hidden;
+    border-radius: 25px;
+    padding-bottom: 127%;
+}
+.item-category__imege::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+}
+.item-category__imege img{
+    transition: all 0.3s ease 0s;
+    position: absolute;width: 100%;height: 100%;top: 0;left: 0;
+    object-fit: cover;
 }
