--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ li{
 .page__main {}
 .page__store {}
 .page__categories {}
+.page__brands {}
 
 /*---------------------------------------------*/
 .header {
@@ -432,4 +433,94 @@ li{
     transition: all 0.3s ease 0s;
     position: absolute;width: 100%;height: 100%;top: 0;left: 0;
     object-fit: cover;
+}
+@media (max-width: 1230px) {
+    .categories__items {
+        column-gap: 40px;
+    }
+}
+@media (max-width: 991.98px) {
+    .categories {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+    .categories__title {
+        margin-bottom: 50px;
+    }
+    .categories__items {
+        column-gap: 30px;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+}
+@media (max-width: 767.98px){
+    .categories {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+    .categories__title {
+        margin-bottom: 20px;
+    }
+}
+@media (max-width: 479.98px) {
+    .categories__items {
+        row-gap: 20px;
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+/*--------------------------------------------------*/
+
+.brands {
+    padding-top: 110px;
+    padding-bottom: 180px;
+}
+.brands__container {}
+.brands__title {
+    margin-bottom: 75px;
+}
+.title {}
+.brands__items {
+    max-width: 1020px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    align-items: center;
+    justify-content: space-between;
+    column-gap: 20px;
+    row-gap: 80px;
+}
+.brands__item {}
+.brands__item img {
+    max-width: 100%;
+}
+
+@media (max-width: 991.98px) {
+    .brands{
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+    .brands__title {
+        margin-bottom: 40px;
+    }
+    .brands__items {
+        row-gap: 50px;
+        grid-template-columns: repeat(3, auto);
+    }
+}
+@media (max-width: 767.98px) {
+    .brands{
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+    .brands__title {
+        margin-bottom: 20px;
+    }
+}
+@media (max-width: 600px) {
+    .brands__items {
+        row-gap: 20px;
+        justify-content: center;
+        grid-template-columns: repeat(2, auto);
+    }
 }
