--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ li{
 .page__store {}
 .page__categories {}
 .page__brands {}
+.page__why {}
 
 /*---------------------------------------------*/
 .header {
@@ -522,5 +523,76 @@ li{
         row-gap: 20px;
         justify-content: center;
         grid-template-columns: repeat(2, auto);
+    }
+}
+/*--------------------------------------------------------*/
+
+.why {
+    background-color: #121212;
+    padding-top: 90px;
+    padding-bottom: 90px;
+}
+.why__container {}
+.why__title {
+    margin-bottom: 35px;
+    color: #fff;
+}
+.why__items {
+    display: grid;
+    grid-template-columns: repeat(3,auto);
+    justify-content: space-between;
+    gap: 40px;
+}
+.why__item {}
+
+.item-why {
+    display: grid;
+    justify-items: center;
+    padding: 40px;
+    text-align: center;
+}
+.item-why__icon {
+    background: #262626;
+    border-radius: 20px;
+    display: flex;
+    width: 72px;
+    height: 72px;
+    justify-content: center;
+    align-items: center;
+}
+.item-why__icon:not(:last-child){
+    margin-bottom: 40px;
+}
+.item-why__title {
+    text-transform: uppercase;
+    font-weight: 600;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.5;
+    letter-spacing: 0.08em;
+}
+.item-why__title:not(:last-child){
+    margin-bottom: 12px;
+}
+.item-why__text {
+    font-size: 14px;
+    line-height: 1.5;
+}
+@media (max-width: 991.98px) {
+    .why {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+    .why__items {
+        grid-template-columns: repeat(2,auto);
+    }
+}
+@media (max-width: 767.98px) {
+    .item-why {
+        padding: 20px;
+    }
+    .why__items {
+        justify-content: stretch;
+        grid-template-columns: repeat(1,auto);
     }
 }
