slide-swiper-reviews

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ li{
 .page__categories {}
 .page__brands {}
 .page__why {}
+.page__reviews {}
 
 /*---------------------------------------------*/
 .header {
@@ -596,3 +597,102 @@ li{
         grid-template-columns: repeat(1,auto);
     }
 }
+/*------------------------------------------------------*/
+
+.reviews {
+    padding-top: 240px;
+    padding-bottom: 240px;
+}
+.reviews__container {}
+.reviews__title {
+    margin-bottom: 100px;
+}
+
+.reviews__swiper {}
+.swiper-reviews {}
+.swiper-reviews__wrapper {}
+.swiper-reviews__slide {
+    
+}
+.slide-swiper-reviews {
+    display: flex;
+}
+.slide-swiper-reviews__picture {
+    flex: 0 1 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.slide-swiper-reviews__imege {
+    width: 320px;
+    height: 320px;
+    position: relative;
+}
+.slide-swiper-reviews__imege::before {
+    content: "";
+    position: absolute;
+    width: 285px;height: 257px;
+    top: 50px;left: -80px;
+    transform: rotate(-10deg);
+    background-color: #FF6428;
+    border-radius: 40px 0px 400px 400px;
+}
+.slide-swiper-reviews__imege img {
+    border-radius: 50%;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: center;
+}
+
+.slide-swiper-reviews__body {
+    flex: 0 1 50%;
+}
+.slide-swiper-reviews__text {
+    font-size: 24px;
+    line-height: 160%;
+}
+.slide-swiper-reviews__text:not(:last-child) {
+    margin-bottom: 56px;
+}
+.slide-swiper-reviews__autor {
+
+}
+.slide-swiper-reviews__name {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 160%;
+    color: #000;
+}
+.slide-swiper-reviews__name:not(:last-child) {
+    margin-bottom: 8px;
+}
+.slide-swiper-reviews__position {
+    color: #868686;
+    font-size: 18px;
+    letter-spacing: 0.08em;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+@media (max-width: 991.98px) {
+    .reviews {
+        padding-top: 80px;
+        padding-bottom: 80px;
+    }
+    .reviews__title {
+        margin-bottom: 50px;
+    }
+}
+@media (max-width: 767.98px) {
+    .reviews {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+    .reviews__title {
+        margin-bottom: 30px;
+    }
+}
+/*---------------------------------------------*/
