--- a/css/style.css
+++ b/css/style.css
@@ -609,6 +609,7 @@ li{
 }
 
 .reviews__swiper {}
+
 .swiper-reviews {}
 .swiper-reviews__wrapper {}
 .swiper-reviews__slide {
@@ -618,6 +619,7 @@ li{
     display: flex;
 }
 .slide-swiper-reviews__picture {
+    overflow: hidden;
     flex: 0 1 50%;
     display: flex;
     justify-content: center;
@@ -657,6 +659,9 @@ li{
 .slide-swiper-reviews__text:not(:last-child) {
     margin-bottom: 56px;
 }
+.slide-swiper-reviews__text p:not(:last-child) {
+    margin-bottom: 15px;
+}
 .slide-swiper-reviews__autor {
 
 }
@@ -676,7 +681,29 @@ li{
     font-weight: 500;
     text-transform: uppercase;
 }
+.swiper-reviews__pagination {
+    display: flex;
+    transform: translate(0px,-100%);
+    justify-content: flex-end;
+}
+.swiper-reviews__pagination .swiper-pagination-bullet{
+    opacity: 1;
+    background: #C4C4C4;
+    border-radius: 20px;
+    flex: 0 0 10px;
+    height: 16px;
+    transition: all 0.3s ease 0s;
+}
+.swiper-reviews__pagination .swiper-pagination-bullet-active{
+    background: #FF6428;
+    flex: 0 0 24px;
+}
 
+@media (max-width: 1230px) {
+    .reviews__swiper.swiper {
+        margin-left: -15px;
+    }
+}
 @media (max-width: 991.98px) {
     .reviews {
         padding-top: 80px;
@@ -684,6 +711,22 @@ li{
     }
     .reviews__title {
         margin-bottom: 50px;
+    }
+    .slide-swiper-reviews__body{
+        padding-left: 15px;
+    }
+    .slide-swiper-reviews {
+        flex-direction: column;
+    }
+    .slide-swiper-reviews__picture {
+        margin-bottom: 25px;
+    }
+    .swiper-reviews__pagination.swiper-pagination {
+        position:relative;
+        bottom: 0;
+        justify-content: center;
+        transform: translate(0px,0px);
+        padding-top: 35px;
     }
 }
 @media (max-width: 767.98px) {
@@ -693,6 +736,29 @@ li{
     }
     .reviews__title {
         margin-bottom: 30px;
+    }
+}
+@media (max-width: 479.98px) {
+    .slide-swiper-reviews__imege {
+        width: 270px;
+        height: 270px;
+    }
+    .slide-swiper-reviews__imege::before {
+        content: "";
+        position: absolute;
+        width: 225px;
+        height: 187px;
+        top: 50px;
+        left: -80px;
+        transform: rotate(-10deg);
+        background-color: #FF6428;
+        border-radius: 40px 0px 400px 400px;
+    }
+    .slide-swiper-reviews__text{
+        font-size: 18px;
+    }
+    .slide-swiper-reviews__text:not(:last-child) {
+        margin-bottom: 25px;
     }
 }
 /*---------------------------------------------*/
